# Database-System-Implementation

./: BigQ.cc  BigQ.h  CMakeLists.txt  Comparison.cc  Comparison.h  Constants.h  CustomComparator.h  CustomComparator2.h  DBFile.cc  DBFile.h  Ddl.cc  File.cc  File.h  Function.cc  Function.h  GenericDBFile.cc  GenericDBFile.h  HeapDBFile.cc  HeapDBFile.h  Lexer.l  Makefile  ParseTree.h  Parser.y  Pipe.cc  Pipe.h  QueryNode.cc  QueryNode.h  QueryPlanner.cc  QueryPlanner.h  README.md  Record.cc  Record.h  RelOp.cc  RelOp.h  Schema.cc  Schema.h  SortedDBFile.cc  SortedDBFile.h  Statistics.cc  Statistics.h  (+35 more)
Tests/: testing.cc
table/: lineitem.tbl
